# Benchmark_highs

./: CMakeLists.txt  README.md  base_results.txt  highs_smoke.cpp  problem_reader.cpp  problem_reader.hpp  testing.cpp  testing.sh
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  solve
results_highs/: results_bench.txt
